--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Laurence Svekis Resume</title>
+  <head><title>Laurence Svekis Resume 2</title>
   <style>
     .footer{
       text-align:center;
